Fixed a layout issue with image crop

--- a/app/components/residents/shared/new-resident-dialog/new-resident-dialog.scss
+++ b/app/components/residents/shared/new-resident-dialog/new-resident-dialog.scss
@@ -4,3 +4,9 @@ md-dialog .imageArea {
   width: 200px;
   height: 200px;
 }
+md-dialog .imageArea2 {
+  background: #bbbbbb;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+}
